compiled libarmadito with builtin modules

--- a/core/configure.ac
+++ b/core/configure.ac
@@ -12,10 +12,9 @@ AC_ARG_ENABLE([debug],
 AM_CONFIG_HEADER(libarmadito/include/config/libarmadito-config-autoconf.h)
 
 # for now, add builtin modules by hand
-# disabled during reorganisation
-#AC_DEFINE([HAVE_ALERT_MODULE],[1],[Define to compile builtin module alert])
-#AC_DEFINE([HAVE_ONDEMAND_MODULE],[1],[Define to compile builtin module alert])
-#AC_DEFINE([HAVE_QUARANTINE_MODULE],[1],[Define to compile builtin module quarantine])
+AC_DEFINE([HAVE_ALERT_MODULE],[1],[Define to compile builtin module alert])
+AC_DEFINE([HAVE_ONDEMAND_MODULE],[1],[Define to compile builtin module on-demand])
+AC_DEFINE([HAVE_QUARANTINE_MODULE],[1],[Define to compile builtin module quarantine])
 
 # This is needed when the first PKG_CHECK_MODULES call is inside a conditional (not the case here, but who knows)
 PKG_PROG_PKG_CONFIG
