--- a/core/linux/service/Makefile.am
+++ b/core/linux/service/Makefile.am
@@ -5,8 +5,8 @@ defaultdir = $(sysconfdir)/default
 dist_default_DATA = armadito-scand-def
 
 logrotatedir = $(sysconfdir)/logrotate.d
-dist_logrotate_DATA = armadito-av
+dist_logrotate_DATA = armadito
 
 rsyslogdir = $(sysconfdir)/rsyslog.d
-dist_rsyslog_DATA = 15-armadito-av.conf
+dist_rsyslog_DATA = 15-armadito.conf
 
