--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "font-awesome": "~4.5.0",
     "angular-bootstrap": "~0.14.3",
     "angular-timer": "~1.3.3",
-    "angular-toastr": "^1.7.0"
+    "angular-toastr": "^1.7.0",
+    "ng-tags-input": "^3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
