--- a/core/doc/man/fr/Makefile.am
+++ b/core/doc/man/fr/Makefile.am
@@ -1,4 +1,4 @@
-#doc_DATA= libuhuru.3 libuhuru.3.html uhuru-modules.3 uhuru-modules.3.html uhuru-scan.1 uhuru-scan.1.html
+doc_DATA= armadito-scan.1 armadito-scan.1.html
 
 ASCIIDOCFLAGS=-a data-uri -a icons -b html5
 A2XFLAGS=--doctype manpage --format manpage -v -v 
@@ -9,7 +9,7 @@ A2XFLAGS=--doctype manpage --format manpage -v -v
 %.html: $(srcdir)/%.txt
 	$(ASCIIDOC) $(ASCIIDOCFLAGS) -o $*.html $(srcdir)/$*.txt
 
-EXTRA_DIST=libuhuru.3.txt uhuru-modules.3.txt uhuru-scan.1.txt
+EXTRA_DIST=armadito-scan.1.txt
 
 CLEANFILES=$(doc_DATA)
- 
+
