--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "angular-bootstrap": "~0.14.3",
     "angular-timer": "~1.3.3",
     "angular-toastr": "^1.7.0",
-    "ng-tags-input": "^3.0.0"
+    "ng-tags-input": "^3.0.0",
+    "angular-translate": "^2.11.0",
+    "angular-translate-loader-url": "^2.11.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
