--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-toastr": "^1.7.0",
     "ng-tags-input": "^3.0.0",
     "angular-translate": "^2.11.0",
-    "angular-translate-loader-url": "^2.11.0"
+    "angular-translate-loader-url": "^2.11.0",
+    "angular-translate-loader-static-files": "^2.11.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
