fixed daemon crash because of NULL date in json state; fixed installation of on-access-linux configuration file

--- a/core/linux/modules/on-access-linux/conf/Makefile.am
+++ b/core/linux/modules/on-access-linux/conf/Makefile.am
@@ -1,4 +1,9 @@
 armaditoconfdir=$(sysconfdir)/armadito/conf.d
-armaditoconf_DATA=on-access-linux.conf on-access-linux-test.conf
+armaditoconf_DATA=\
+on-access-linux.conf
+
+# this one was for test, but it creates error because it contains the same section as file 'on-access-linux.conf'
+# so for now we remove it. To reintroduce the on-access-linux-test, another module must be created with its own .c file
+# on-access-linux-test.conf
 
 EXTRA_DIST=on-access-linux.conf on-access-linux-test.conf
