--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "window": {
     "title": "Armadito",
     "toolbar": false,
-    "frame": false,
+    "frame": true,
     "width": 900,
     "height": 560,
     "position": "center",
