commit to update internationalization

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "window": {
     "title": "Armadito",
     "toolbar": false,
-    "frame": true,
+    "frame": false,
     "width": 900,
     "height": 560,
     "position": "center",
