comment free scan_conf after on_demand scan, add linux/update.c to makefile

--- a/core/json/ui/Makefile.am
+++ b/core/json/ui/Makefile.am
@@ -23,7 +23,11 @@ state.h \
 ui.h \
 ui-linux.c \
 ../../linux/net/unixsockclient.c \
-../../linux/net/unixsockclient.h
+../../linux/net/unixsockclient.h \
+linux/update.c \
+update.h
+#../updatedb/json_process.c 
+#../updatedb/json_process.h 
 
 libarmadito_json_la_CFLAGS= -I$(top_srcdir)/libarmadito/include -I$(top_srcdir)/libarmadito/include/config -I$(top_srcdir)/linux
 libarmadito_json_la_LIBADD= 
