--- a/core/libarmadito/conf/armadito.conf
+++ b/core/libarmadito/conf/armadito.conf
@@ -1,47 +1,20 @@
 #
-# Linux on-demand scan : module configuration
+# Armadito Windows configuration file
 #
 
 [on-demand]
 
 # white list of directories: files in these directories will never be scanned for on-access scan
-white-list-dir="/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/sbin"; "/usr"; "/var"
+#white-list-dir="/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/sbin"; "/usr"; "/var"
 
-# scan executables with module5_2 and clamav
-mime-type="application/x-executable"; module5_2; clamav
-mime-type="application/x-object"; module5_2; clamav
-mime-type="application/x-sharedlib"; module5_2; clamav
-# scan windows executables with module5_2 and clamav
-mime-type="application/x-dosexec"; clamav; module5_2
-mime-type="application/x-msdos-program"; module5_2; clamav
-mime-type="application/x-msdownload"; module5_2; clamav
-# scan PDF with clamav
-mime-type="application/pdf"; clamav
-# clamav scans every file if no other module applies
-mime-type="*"; clamav    
+# scanned mime types: scan everything
+mime-types="*"
 
-[on-access]
+# scan modules: scan with clamav and module5_2
+modules=clamav; module5_2
 
-# scan executables with module5_2 and clamav
-mime-type="application/x-executable"; module5_2; clamav
-mime-type="application/x-object"; module5_2; clamav
-mime-type="application/x-sharedlib"; module5_2; clamav
-# scan windows executables with module5_2 and clamav
-mime-type="application/x-dosexec"; clamav; module5_2
-mime-type="application/x-msdos-program"; module5_2; clamav
-mime-type="application/x-msdownload"; module5_2; clamav
-# scan PDF with clamav
-mime-type="application/pdf"; clamav
-# clamav scans every file if no other module applies
-mime-type="*"; clamav
-
-# 1M, must support units ;-)
-max-size=1048576 
-
-[alert]
-
-alert-dir="@localstatedir@/spool/uhuru"
-
+# 1M, must support units
+#max-size = 1048576 
 
 [quarantine]
 
@@ -55,10 +28,4 @@ enable=1
 # package installation scripts
 quarantine-dir="Quarantine"
 
-
-# [uhuru]
-# REMOVED, path loading directly from uhuru.c
-# this directive trigs loading of the configuration files of the dynamically 
-# loaded modules
-# conf-dir="@sysconfdir@/uhuru/conf.d"
 
