--- a/bower.json
+++ b/bower.json
@@ -14,14 +14,14 @@
     "angular-touch": "^1.4.0",
     "bootswatch-dist": "yeti",
     "angular-ui-router": "~0.2.15",
-    "font-awesome": "~4.5.0",
     "angular-bootstrap": "~0.14.3",
     "angular-timer": "~1.3.3",
     "angular-toastr": "^1.7.0",
     "ng-tags-input": "^3.0.0",
     "angular-translate": "^2.11.0",
     "angular-translate-loader-url": "^2.11.0",
-    "angular-translate-loader-static-files": "^2.11.0"
+    "angular-translate-loader-static-files": "^2.11.0",
+    "font-awesome": "fontawesome#^4.6.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -33,6 +33,12 @@
       "main": [
         "css/bootstrap.css",
         "js/bootstrap.js"
+      ]
+    },
+    "font-awesome": {
+      "main": [
+        "less/font-awesome.less",
+        "css/font-awesome.css"
       ]
     }
   }
