Correct osdeps path and add to Makefile linux

--- a/modules/clamav/src/Makefile.am
+++ b/modules/clamav/src/Makefile.am
@@ -1,7 +1,7 @@
 modulesdir=$(libdir)/armadito/modules
 modules_LTLIBRARIES=clamav.la
 
-clamav_la_SOURCES=clamav.c os/osdeps.h
+clamav_la_SOURCES=clamav.c os/linux/osdeps.c os/osdeps.h
 
 clamav_la_LDFLAGS= -module -avoid-version
 clamav_la_CFLAGS= @LIBARMADITO_CFLAGS@
