Ignore zip files in directory

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,6 @@ build/windows/VS/Armadito-AV/Armadito-AV.opensdf
 build/windows/VS/Armadito-AV/Armadito-AV.sdf
 build/windows/VS/Armadito-AV/Armadito-AV.v12.suo
 core/windows/driver/signature/*
+*.zip
 
 
