armaditi-av : windows :: enable on-access configuration

--- a/core/libarmadito/conf/armadito.conf
+++ b/core/libarmadito/conf/armadito.conf
@@ -28,4 +28,11 @@ enable=1
 # package installation scripts
 quarantine-dir="Quarantine"
 
+[on-access]
+
+enable=1
+# clamav is the default module for on-acces scan.
+modules=clamav
+# scanned mime types: scan everything
+mime-types="*"
 
