armadito-av :: windows :: enable quarantine module

--- a/core/libarmadito/conf/armadito.conf
+++ b/core/libarmadito/conf/armadito.conf
@@ -26,7 +26,7 @@ enable=1
 # non-readable
 # quarantine directory must be mode 333 octal. This is normaly managed by 
 # package installation scripts
-quarantine-dir="Quarantine"
+quarantine-dir="quarantine"
 
 [on-access]
 
