armadito-av :: Windows :: add PDF module in conf file + scan bug fix.

--- a/core/libarmadito/conf/armadito.conf
+++ b/core/libarmadito/conf/armadito.conf
@@ -11,7 +11,7 @@
 mime-types="*"
 
 # scan modules: scan with clamav and module5_2
-modules=clamav; module5_2
+modules=clamav; module5_2; modulePDF
 
 # 1M, must support units
 #max-size = 1048576 
