Replace tatou by armadito everywhere

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "tatou",
+  "name": "armadito",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
@@ -28,7 +28,7 @@
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "tatouApp",
+  "moduleName": "armaditoApp",
   "overrides": {
     "bootswatch-dist": {
       "main": [
