--- a/core/libarmadito/conf/armadito.conf
+++ b/core/libarmadito/conf/armadito.conf
@@ -10,7 +10,7 @@
 # scanned mime types: scan everything
 mime-types="*"
 
-# scan modules: scan with clamav and module5_2
+# scan modules: scan with clamav, module PDF and module5_2
 modules=clamav; module5_2; modulePDF
 
 # 1M, must support units
