Replace SizeofFile function by specific os functions, adding E_FSTAT_ERROR

--- a/modules/module5_2/src/Makefile.am
+++ b/modules/module5_2/src/Makefile.am
@@ -13,11 +13,11 @@ lib/include/elfReader.h \
 lib/include/gestionPE.h \
 lib/include/kNN.h \
 lib/include/miniz.h \
+lib/include/util.h \
 lib/include/model.h \
 lib/include/table.h \
 lib/include/tfidfDetection.h \
 lib/include/uh_errors.h \
-lib/include/utils.h \
 lib/include/vector.h \
 lib/include/windowsTypes.h \
 lib/include/osdeps.h \
@@ -33,7 +33,6 @@ lib/src/table.c \
 lib/src/linux/osdeps.c \
 lib/src/tfidfDetection.c \
 lib/src/uh_errors.c \
-lib/src/utils.c \
 lib/src/vector.c 
 
 AM_CPPFLAGS= -DMODULE5_2_DBDIR='"@MODULE5_2_DBDIR@"'
