ignore vxcproj.user files

--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,7 @@ build/windows/VS/Armadito-AV/Armadito-AV.sdf
 build/windows/VS/Armadito-AV/Armadito-AV.v12.suo
 core/windows/driver/signature/*
 *.zip
+*.vcxproj.user
+
 
 
