Changed the  systray icon size & color

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "version": "0.0.1",
   "main": "app/index.html",
   "window": {
+    "icon": "app/images/armadito.jpg",
     "title": "Armadito",
     "toolbar": false,
     "frame": true,
