fixed remaining naming issues

--- a/modules/clamav/conf/clamav.conf
+++ b/modules/clamav/conf/clamav.conf
@@ -1,5 +1,5 @@
 #
-# Uhuru Clamav scan module configuration
+# Armadito Clamav scan module configuration
 #
 [clamav]
 
@@ -10,7 +10,5 @@
 #tmpdir="C:\\tmp"
 
 # default signatures databases directory
-#dbdir=/var/lib/uhuru/bases/clamav
+#dbdir=/var/lib/armadito/bases/clamav
 
-# additional signatures database
-#db=/var/lib/uhuru/bases/clamav/extras/oiv.db
