--- a/modules/module5_2/conf/module5_2.conf
+++ b/modules/module5_2/conf/module5_2.conf
@@ -1,7 +1,7 @@
 #
-# Uhuru 5.2 scan module configuration
+# Armadito H1 scan module configuration
 #
 [module5_2]
 
 # default databases directory
-#dbdir=/var/lib/uhuru/bases/module5_2
+#dbdir=/var/lib/armadito/bases/module5_2
