--- a/modules/module5_2/conf/Makefile.am
+++ b/modules/module5_2/conf/Makefile.am
@@ -1,4 +1,4 @@
-uhuruconfdir=$(sysconfdir)/uhuru/conf.d
-uhuruconf_DATA=module5_2.conf
+confdir=$(sysconfdir)/armadito/conf.d
+conf_DATA=module5_2.conf
 
 EXTRA_DIST=module5_2.conf
