Renaming H1 in core

--- a/core/libarmadito/conf/armadito.conf
+++ b/core/libarmadito/conf/armadito.conf
@@ -10,8 +10,8 @@
 # scanned mime types: scan everything
 mime-types="*"
 
-# scan modules: scan with clamav, module PDF and module5_2
-modules=clamav; module5_2; modulePDF
+# scan modules: scan with clamav, module PDF and moduleH1
+modules=clamav; moduleH1; modulePDF
 
 # 1M, must support units
 #max-size = 1048576 
