setup normal package.json

--- a/gui/package.json
+++ b/gui/package.json
@@ -33,7 +33,7 @@
     "node": ">=0.10.0"
   },
   "version": "0.9.0",
-  "main": "dist/index.html",
+  "main": "app/index.html",
   "window": {
     "icon": "app/images/armadito.jpg",
     "title": "Armadito",
