--- a/core/libarmadito/pkgconfig/libarmadito.pc.in
+++ b/core/libarmadito/pkgconfig/libarmadito.pc.in
@@ -8,6 +8,6 @@ version=@PACKAGE_VERSION@
 Name: ARMADITO anti-virus library
 Description: ARMADITO anti-virus library
 Version: ${version} 
-Requires: gmodule-2.0 glib-2.0 libxml-2.0
-Libs:-L${libdir} -larmadito -lmagic
+Requires.private: gmodule-2.0 glib-2.0 libxml-2.0
+Libs:-L${libdir} -larmadito
 Cflags: -I${includedir} 
