fix check for programs

--- a/gui/configure.ac
+++ b/gui/configure.ac
@@ -8,19 +8,25 @@ AC_ARG_WITH([nwjs],
 	with_nwjs="none")
 
 # checks for programs.
-AC_PATH_PROG(ZIP, zip)
 AC_PATH_PROG(NPM, npm)
+if test x'$NPM' = x ; then
+   AC_MSG_ERROR("cannot find npm")
+fi
 
 # check for nw.js
 AC_MSG_CHECKING(for nw.js tarball)
+NWJS_TARBALL='none'
 if test "$with_nwjs" != "none" ; then
    NWJS_TARBALL="$with_nwjs"
 else
-   NWJS_TARBALL=`find $srcdir/nwjs -name 'nwjs-v*.tar.gz'`
+   FOUND_NWJS_TARBALL=`find $srcdir -name 'nwjs-v*.tar.gz'`
+   if test x"$FOUND_NWJS_TARBALL" != x ; then
+   NWJS_TARBALL=$FOUND_NWJS_TARBALL
+   fi
 fi
 AC_MSG_RESULT($NWJS_TARBALL)
 if test ! -f "$NWJS_TARBALL" ; then
-   AC_MSG_ERROR("cannot find $NWJS_TARBALL")
+   AC_MSG_ERROR("cannot find NW.JS tarball")
 fi
 AC_SUBST(NWJS_TARBALL)
 
