--- a/core/configure.ac
+++ b/core/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT(armadito-core,0.10.1,fdechelle@teclib.com)
+AC_INIT(armadito-core,0.11.0-exp,fdechelle@teclib.com)
 AM_INIT_AUTOMAKE([subdir-objects])
 
 # collect arguments
@@ -90,6 +90,12 @@ AC_DEFINE([GLIB_DISABLE_DEPRECATION_WARNINGS], [1], [Disable glib deprecation wa
 PKG_CHECK_MODULES(LIBXML2, libxml-2.0, [HAVE_LIBXML2=yes], [HAVE_LIBXML2=no])
 if test "$HAVE_LIBXML2" = "no"; then
    AC_MSG_ERROR("cannot find libxml2 library")
+fi
+
+# check for libmicrohttpd
+PKG_CHECK_MODULES(LIBMICROHTTPD, libmicrohttpd, [HAVE_LIBMICROHTTPD=yes], [HAVE_LIBMICROHTTPD=no])
+if test "$HAVE_LIBMICROHTTPD" = "no"; then
+   AC_MSG_ERROR("cannot find libmicrohttpd library")
 fi
 
 # check for libmagic, that has no pkg-config
